--- a/locales/zh.json
+++ b/locales/zh.json
@@ -107,6 +107,7 @@
     "Configuration Sheet": "配置单",
     "Configuration-alarm": "告警配置",
     "Confirm to exit the current app": "确认退出当前应用?",
+    "Confirm to exit the current {name}?": "确认退出当前{name}?",
     "Console": "控制台",
     "Contact your organization administrator to invite you to join": "联系组织管理员，邀请您加入",
     "Container": "容器",
@@ -175,7 +176,6 @@
     "First Contentful Paint Time": "首屏时间",
     "First Paint Time": "白屏时间",
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "各环境对应的集群资源信息，具体集群的概念和设置请参考",
-    "For editing members, setting member roles and role permissions, please refer to": "编辑成员，设置成员角色，相关角色权限请参考",
     "Frankfurt": "法兰克福",
     "Fri": "五",
     "Full screen": "全屏",
@@ -309,7 +309,6 @@
     "Please enter the number of {min}-{max} decimal": "请填写{min}-{max}位小数的数字",
     "Please enter the {name}": "请输入{name}",
     "Please enter version number, such as x.y.z.": "请输入版本号，如：x.y.z",
-    "Please enter {name}": "请输入{name}",
     "Please select the member label": "请选择成员标签",
     "Please select the role": "请选择成员角色",
     "Pod Details": "POD详情",
@@ -494,7 +493,6 @@
     "alibaba cloud": "阿里云",
     "all keys are required": "所有标示必填",
     "allocated": "分配量：",
-    "allocated and utilization rate": "配额及使用率",
     "analysis completed": "分析完成",
     "analysis failed": "分析失败",
     "analysis rule": "分析规则",
@@ -763,7 +761,6 @@
     "no results yet": "暂无结果",
     "no running runtime": "没有运行的Runtime",
     "none": "无",
-    "node": "节点",
     "not in": "不包含",
     "not member": "非成员",
     "not started": "未启动",
@@ -776,7 +773,6 @@
     "on": "开",
     "one key all read": "一键已读",
     "operated successfully": "操作成功",
-    "operation": "操作",
     "operation log": "操作日志",
     "operation manage platform": "运营管理平台",
     "operations": "操作",
@@ -801,7 +797,6 @@
     "platform configs": "平台配置",
     "please authenticate first": "请先进行认证",
     "please choose the {name}": "请选择{name}",
-    "please choose {name}": "请选择{name}",
     "please confirm your password!": "请确认你的密码!",
     "please contact": "请联系",
     "please deal with it promptly": "请及时处理",
@@ -841,6 +836,7 @@
     "public": "公有",
     "queuing": "排队中",
     "queuing for resources": "排队等待资源中",
+    "quota and usage": "配额及使用率",
     "ready to execute": "准备执行",
     "reason for rejection": "拒绝原因",
     "recent import and export records": "最近的导入导出记录",
@@ -929,7 +925,6 @@
     "submitter": "提交人",
     "succeed": "成功",
     "such as": "如",
-    "sure to exit the current {name}?": "确认退出当前{name}?",
     "tag": "标签",
     "tcp protocol": "TCP 协议",
     "template already exists": "该模板已存在",
@@ -981,7 +976,6 @@
     "usage": "使用量：",
     "user": "用户",
     "user ID": "用户ID",
-    "user name": "用户名",
     "user {name} canceled": "用户{name}主动取消",
     "valid until 1:00 am the next day": "次日凌晨 1:00 前有效",
     "variable name": "变量名",
@@ -998,7 +992,6 @@
     "warning": "警告",
     "week": "周",
     "weeks": "周",
-    "whether to put {name} in public": "是否公开{name}",
     "whether to use a proxy": "是否使用代理",
     "you have new site message, please pay attention to check": "您有新的站内信，请注意查看",
     "{action} successfully": "{action}成功",
