--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -668,6 +668,7 @@
     "Custom": "Custom",
     "DEFAULT": "DEFAULT",
     "Default configuration": "Default configuration",
+    "Deleted projects cannot be recovered. Please enter the {name} to confirm.": "Deleted projects cannot be recovered. Please enter {name} to confirm.",
     "Development": "Development",
     "Download Log": "Download Log",
     "Edit Configuration": "Edit Configuration",
@@ -745,16 +746,18 @@
     "delete": "delete",
     "delete current {deleteItem}": "delete current {deleteItem}",
     "delete service": "delete service",
+    "delete-project": "delete",
     "double confirm": "double confirm",
     "duration(minutes)": "duration(minutes)",
     "error occurred": "error occurred",
     "execution conditions": "execution conditions",
-    "exit": "exit",
     "exit current {name}": "exit current {name}",
+    "exit-app": "exit",
     "exit-confirm-tip app": "After exiting the current app, you will no longer have permission for the app. Please operate with caution.",
-    "exit-confirm-tip {name}": "after exiting the current {name}, you will no longer have the permission of the {name}, please operate with caution",
+    "exit-confirm-tip {name}": "After exiting the current {name}, you will no longer have permission for the {name}. Please operate with caution.",
+    "exit-project": "exit",
     "exit-sub-tip app": "After exiting the current app, you will no longer have permission for the app. If you want to join again, it requires the approval of the admin. Confirm to exit?",
-    "exit-sub-tip {name}": "after exiting the current {name}, you will no longer have the authority to participate in {name} work. If you want to join again, you need to add it by the {name} administrator. Please confirm whether to exit?",
+    "exit-sub-tip {name}": "After exiting the current {name}, you will no longer have permission for the {name}. If you want to join again, it requires the approval of the admin. Confirm to exit?",
     "file type": "file type",
     "folder": "folder",
     "form": "form",
@@ -839,7 +842,6 @@
     "Add test plan": "Add test plan",
     "Add to Test Plan": "Add to Test Plan",
     "Add-branch-rule": "Add",
-    "Create": "Create",
     "Add-data-source": "Add",
     "Add-label": "Add",
     "Add-merge-request": "Add",
@@ -938,6 +940,7 @@
     "Copy issue": "Copy issue",
     "Copy to": "Copy to",
     "Coverage": "Coverage",
+    "Create": "Create",
     "Create a new issue, and you can drag it to the iteration on the right and set its priority.": "to create new items and arrange the priority of items by dragging to the right to iterate",
     "Create a new iteration, and you can drag the backlog on the left to an iteration and set its priority.": "Create a new iteration, and you can drag the backlog on the left to an iteration and set its priority.",
     "Create deployment": "Create deployment",
@@ -1270,7 +1273,6 @@
     "The new data will be lost if closed. Continue?": "new data will be lost after closing, confirm closing ?",
     "The organizations I joined": "The organizations I joined",
     "The original estimated time for this event is": "The original estimated time for this event is",
-    "The project cannot be restored after deletion. Please enter the {name} to confirm.": "after the project is deleted, it cannot be restored. Please enter the {name} to confirm",
     "The same code can be compiled by pipeline to generate different artifacts for different environments, and you can set configurations for different environments here.": "The same code can be compiled by pipeline to generate different artifacts for different environments, and you can set configurations for different environments here.",
     "The start time of this counted time, not the start time of the issue": "The start time of this counted time, not the start time of the issue",
     "The title can not be empty": "The title can not be empty",
@@ -1569,7 +1571,6 @@
     "file moved": "file moved",
     "file must be smaller than 20 MB": "file must be smaller than 20 MB",
     "file type error": "file type error",
-    "files": "files",
     "filter by application name": "filter by application name",
     "filter name": "filter name",
     "folder is created successfully": "folder is created successfully",
@@ -1704,7 +1705,6 @@
     "parameter key can only contain letters, numbers, dots, underscores and hyphens": "parameter key can only contain letters, numbers, dots, underscores and hyphens",
     "parameter value": "parameter value",
     "parameter value (required)": "parameter value (required)",
-    "participant": "participant",
     "pass": "pass",
     "paste the url path here": "paste the url path here",
     "path": "path",
@@ -1782,7 +1782,6 @@
     "ports": "ports",
     "post comment": "post comment",
     "previous": "previous",
-    "principal": "principal",
     "professional edition": "professional edition",
     "project created successfully": "project created successfully",
     "project deleted successfully": "project deleted successfully",
