--- a/locales/en.json
+++ b/locales/en.json
@@ -107,6 +107,7 @@
     "Configuration Sheet": "Configuration Sheet",
     "Configuration-alarm": "Configuration",
     "Confirm to exit the current app": "Confirm to exit the current app?",
+    "Confirm to exit the current {name}?": "Confirm to exit the current {name}?",
     "Console": "Console",
     "Contact your organization administrator to invite you to join": "Contact your organization administrator to invite you to join",
     "Container": "Container",
@@ -175,7 +176,6 @@
     "First Contentful Paint Time": "First Contentful Paint Time",
     "First Paint Time": "First Paint Time",
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see",
-    "For editing members, setting member roles and role permissions, please refer to": "For editing members, setting member roles and role permissions, please refer to",
     "Frankfurt": "Frankfurt",
     "Fri": "Fri",
     "Full screen": "Full screen",
@@ -309,7 +309,6 @@
     "Please enter the number of {min}-{max} decimal": "Please enter the number of {min}-{max} decimal",
     "Please enter the {name}": "Please enter the {name}",
     "Please enter version number, such as x.y.z.": "please enter version number, such as x.y.z",
-    "Please enter {name}": "Please enter {name}",
     "Please select the member label": "Please select the member label",
     "Please select the role": "Please select the role",
     "Pod Details": "Pod Details",
@@ -494,7 +493,6 @@
     "alibaba cloud": "alibaba cloud",
     "all keys are required": "all keys are required",
     "allocated": "allocated",
-    "allocated and utilization rate": "allocated and utilization rate",
     "analysis completed": "analysis completed",
     "analysis failed": "analysis failed",
     "analysis rule": "analysis rule",
@@ -763,7 +761,6 @@
     "no results yet": "no results yet",
     "no running runtime": "no running runtime",
     "none": "none",
-    "node": "node",
     "not in": "not in",
     "not member": "not member",
     "not started": "not started",
@@ -776,7 +773,6 @@
     "on": "on",
     "one key all read": "one key all read",
     "operated successfully": "operated successfully",
-    "operation": "operation",
     "operation log": "operation log",
     "operation manage platform": "operation manage platform",
     "operations": "operations",
@@ -801,7 +797,6 @@
     "platform configs": "platform configs",
     "please authenticate first": "please authenticate first",
     "please choose the {name}": "please choose the {name}",
-    "please choose {name}": "please choose {name}",
     "please confirm your password!": "please confirm your password!",
     "please contact": "please contact",
     "please deal with it promptly": "please deal with it promptly",
@@ -841,6 +836,7 @@
     "public": "public",
     "queuing": "queuing",
     "queuing for resources": "queuing for resources",
+    "quota and usage": "quota and usage",
     "ready to execute": "ready to execute",
     "reason for rejection": "reason for rejection",
     "recent import and export records": "recent import and export records",
@@ -893,7 +889,7 @@
     "select {name}": "select {name}",
     "selected template": "selected template",
     "selected {name}": "selected {name}",
-    "separated by comma, start with letters and can contain": "multiple use, separate, start with a letter and can contain: numbers / _ - . $ # @ *, * only available in last",
+    "separated by comma, start with letters and can contain": "Multiple use, separate, start with a letter and can contain: numbers / _ - . $ # @ *, * only available in last",
     "service": "service",
     "services": "services",
     "set as {type}": "set as {type}",
@@ -929,7 +925,6 @@
     "submitter": "submitter",
     "succeed": "succeed",
     "such as": "such as",
-    "sure to exit the current {name}?": "sure to exit the current {name}?",
     "tag": "tag",
     "tcp protocol": "tcp protocol",
     "template already exists": "template already exists",
@@ -981,7 +976,6 @@
     "usage": "used:",
     "user": "user",
     "user ID": "user ID",
-    "user name": "user name",
     "user {name} canceled": "user {name} canceled",
     "valid until 1:00 am the next day": "valid until 1:00 am the next day",
     "variable name": "variable name",
@@ -998,7 +992,6 @@
     "warning": "warning",
     "week": "week",
     "weeks": "weeks",
-    "whether to put {name} in public": "whether to put {name} in public",
     "whether to use a proxy": "whether to use a proxy",
     "you have new site message, please pay attention to check": "you have new site message, please pay attention to check",
     "{action} successfully": "{action} successfully",
